Workbench Anti-Aliasing behavior inverted #62810

Closed
opened 2019-03-21 10:44:24 +01:00 by Rainer Trummer · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.96

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 08:29, hash: b346a7c0df
Worked: (optional)

Short description of error
Not sure if this is only on my end, but since this morning I see the anit-aliasing in the workbench engine behave the opposite of how it should be. Normally, when the scene is not interacted with, the AA would happen. While you navigate in the 3D View, AA levels would be reduced or even turned off to improve performance. However, with this build, it's the opposite. The scene is anti-aliased while interacting, and aliased while static. See the gif below:

inverted_AA.gif

Exact steps for others to reproduce the error
Open Blender compiled today, spin a model, look at the edges.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.96 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 08:29, hash: `b346a7c0df` Worked: (optional) **Short description of error** Not sure if this is only on my end, but since this morning I see the anit-aliasing in the workbench engine behave the opposite of how it should be. Normally, when the scene is not interacted with, the AA would happen. While you navigate in the 3D View, AA levels would be reduced or even turned off to improve performance. However, with this build, it's the opposite. The scene is anti-aliased while interacting, and aliased while static. See the gif below: ![inverted_AA.gif](https://archive.blender.org/developer/F6859821/inverted_AA.gif) **Exact steps for others to reproduce the error** Open Blender compiled today, spin a model, look at the edges.
Author

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer
Author

Eevee LookDev and Wireframe mode are NOT affected by this, this is Workbench only.

Eevee LookDev and Wireframe mode are NOT affected by this, this is Workbench only.
Jeroen Bakker was assigned by Brecht Van Lommel 2019-03-21 11:11:02 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this on my end.

Could you do a step by step guide to make sure I'm not missing something?

I can't reproduce this on my end. Could you do a step by step guide to make sure I'm not missing something?

Added subscriber: @Leha

Added subscriber: @Leha

I can reproduce. Image attached yesterday and today comparison in sculpt mode:

yesterday-today.png

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: 0bbff8a711

I can reproduce. Image attached yesterday and today comparison in sculpt mode: ![yesterday-today.png](https://archive.blender.org/developer/F6860218/yesterday-today.png) **System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: `0bbff8a711`

Added subscriber: @machieb

Added subscriber: @machieb

Can confirm, with the default cube, there is no AA. (Windows 10 Pro, Geforce GTX1080Ti)
Blender Workbench AA.JPG

Can confirm, with the default cube, there is no AA. (Windows 10 Pro, Geforce GTX1080Ti) ![Blender Workbench AA.JPG](https://archive.blender.org/developer/F6860267/Blender_Workbench_AA.JPG)

Blender beta verion d47f827019 from the 19th of march has antialiasing. If you release after rotating in the viewport AA is applied.
The blender version for yesterday (47ba487e05 20th of march) has the same problem with the one (0bbff8a711) from today. No AA applied.

Blender beta verion d47f827019f2 from the 19th of march has antialiasing. If you release after rotating in the viewport AA is applied. The blender version for yesterday (47ba487e05da 20th of march) has the same problem with the one (0bbff8a71138) from today. No AA applied.

This issue was referenced by b832f6f915

This issue was referenced by b832f6f9150eda34e85974756a591e750b13c83e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Introduced by #60820. It used incorrect logic to determine if TAA was enabled.

Introduced by #60820. It used incorrect logic to determine if TAA was enabled.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62810
No description provided.